2010-01-04  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* utils/hichannel.html,
	utils/hichannel.json,
	utils/hichannel.py: Add new mechanism about JSON.
	* utils/hichannel.html,
	utils/hichannel.json,
	utils/hichannel.py,
	utils/hichannel.yaml,
	utils/player.html: Add audio player of HTML5 and adjust data format.

2010-01-03  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/Makefile.am,
	src/betaradio.c,
	src/gstplay.c,
	src/streamplayer.h: Refactor for abstract stream player.
	* autogen.sh,
	po/POTFILES.in,
	po/zh_TW.po: Fix compilation error and update po file.
	* utils/hichannel.html,
	utils/hichannel.py,
	utils/hichannel.yaml: Add new mechanism about YAML.
	* src/radiosite.h: Create the prototype for RadioSite.
	* utils/hichannel.yaml: Replace 'mms' with 'http'.
	* COPYING,
	src/betaradio.c,
	src/channel.c,
	src/channel.h,
	src/gstplay.c,
	src/radiosite.c,
	src/radiosite.h,
	src/sitelist.h,
	src/streamplayer.h: Change license from GPLv2 to GPLv3.

2009-04-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac,
	po/zh_TW.po,
	src/betaradio.c,
	src/channel.c,
	src/channel.h,
	src/sitelist.h: Update radio list and remove TV.

2009-04-11  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/channel.c: Fetch mms url if fetching http url failed.

2009-01-26  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* Makefile.am,
	autogen.sh,
	configure.ac,
	m4/Makefile.am,
	po/Makevars,
	po/zh_TW.po,
	src/Makefile.am,
	src/betaradio.c: The roughly working gettext support.
	* autogen.sh,
	configure.ac,
	po/zh_TW.po: Polish to pass through `make distcheck`.

2009-01-25  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* TODO: Update todo list.
	* configure.ac,
	m4/Makefile.am,
	po/LINGUAS,
	po/Makevars,
	po/POTFILES.in: Try to add i18n support.
	* Makefile.am: Add the missing SUBDIRS.
	* po/zh_TW.po: Add zh_TW translation file.
	* Makefile.am: Add the missing include header gettext.h from
	/usr/share/gettext/gettext.