@@ -1,3 +1,8 @@
+2010-01-05  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* utils/player.html,
+	utils/player.js: Use unobtrusive JavaScript.
+
 2010-01-04  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* utils/hichannel.html,
